examples/test/testpolicy8823.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8823
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key9: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value3
          key5: value26
          key34: value2
      podSelector:
        matchLabels:
          key25: value33
          key35: value27
          key43: value41
